--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <main class="container">
 <h1 class="display-1">Hello World!!!</h1>
 <p class="lead">Welcome to some dummy content for instalment 104 of the <a href="https://pbs.bart.ficer.net/" target="_blank" rel="noopener">Programming by Stealth</a> blog/podcast series.</p>
+
+<p><em>Hello World</em> is a long-standing programming tradition, [learn more on Wikipedia](https://en.wikipedia.org/wiki/%22Hello,_World!%22_program).</p>
+
 </main>
 </body>
 </html>
