wip: added Bootstrap JS support

--- a/index.html
+++ b/index.html
@@ -70,5 +70,9 @@ console.info('Hello World!');
 
 </main>
 <footer class="container small text-muted">&copy; Bart Busschots 2020 — Released under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank" rel="noopener">Creative Commons Attribution-NonCommercial-ShareAlike</a>.</footer>
+
+<!-- Include the jQuery & Bootstrap JS Libraries -->
+<script src="contrib/jQuery3.5/jquery.min.js"></script>
+<script src="contrib/Bootstrap4.5/bootstrap.bundle.min.js"></script>
 </body>
 </html>
