feat: added more info links for each programming language

--- a/index.html
+++ b/index.html
@@ -80,18 +80,21 @@ SELECT "Hello World\n";
 # 1999 - PHP
 &lt;?php echo 'Hello World!' ?&gt;
       </pre>
+      <div class="carousel-caption"><a href="https://www.php.net" class="btn btn-secondary btn-sm" target="_blank" rel="noopener">Learn More …</a></div>
     </div>
     <div class="carousel-item p-3">
       <pre class="mx-auto w-75 text-light" style="height: 12em;">
 # 2000 - Perl
 print "Hello, World!\n";
       </pre>
+      <div class="carousel-caption"><a href="https://www.perl.org" class="btn btn-secondary btn-sm" target="_blank" rel="noopener">Learn More …</a></div>
     </div>
     <div class="carousel-item p-3">
       <pre class="mx-auto w-75 text-light" style="height: 12em;">
 ; 2000 - LISP
 (format t "Hello, World!~%"))
       </pre>
+      <div class="carousel-caption"><a href="https://en.wikipedia.org/wiki/Lisp_(programming_language)" class="btn btn-secondary btn-sm" target="_blank" rel="noopener">Learn More …</a></div>
     </div>
     <div class="carousel-item p-3">
       <pre class="mx-auto w-75 text-light" style="height: 12em;">
@@ -102,12 +105,14 @@ int main(void){
   return 0;
 }
       </pre>
+      <div class="carousel-caption"><a href="https://en.wikipedia.org/wiki/C_(programming_language)" class="btn btn-secondary btn-sm" target="_blank" rel="noopener">Learn More …</a></div>
     </div>
     <div class="carousel-item p-3">
       <pre class="mx-auto w-75 text-light" style="height: 12em;">
 // 2015 - NodeJS
 console.info('Hello World!');
       </pre>
+      <div class="carousel-caption"><a href="https://nodejs.org/" class="btn btn-secondary btn-sm" target="_blank" rel="noopener">Learn More …</a></div>
     </div>
   </div>
   <a class="carousel-control-prev" href="#programmingHistroy-carousel" role="button" data-slide="prev">
