--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <h2>Bart's Programming History in <em>Hello Worlds</em></h2>
 
-<div id="programmingHistroy-carousel" class="carousel slide border rounded bg-success" data-ride="carousel"  data-interval="3000">
+<div id="programmingHistroy-carousel" class="carousel slide border rounded bg-success mb-3" data-ride="carousel"  data-interval="3000">
   <ol class="carousel-indicators">
     <li data-target="#programmingHistroy-carousel" data-slide-to="0" class="active"></li>
     <li data-target="#programmingHistroy-carousel" data-slide-to="1"></li>
@@ -124,6 +124,10 @@ console.info('Hello World!');
     <span class="sr-only">Next</span>
   </a>
 </div>
+
+<h2>Powered by Open Source</h2>
+
+<p>Almost everything in this series is powered by open source technologies. Even this silly little demo uses <a href="https://getbootstrap.com/docs/4.5/getting-started/introduction/" target="_blank" rel="noopener">Bootstrap 4</a>.</p>
 
 <h2>Bart's Favourite Time Travel Movie</h2>
 
