chore: added MomentJS

--- a/index.html
+++ b/index.html
@@ -141,5 +141,8 @@ console.info('Hello World!');
 <!-- Include the jQuery & Bootstrap JS Libraries -->
 <script src="contrib/jQuery3.5/jquery.min.js"></script>
 <script src="contrib/Bootstrap4.5/bootstrap.bundle.min.js"></script>
+
+<!-- Include MomentJS -->
+<script src="contrib/MomentJS2.29/moment-with-locales.min.js"></script>
 </body>
 </html>
