Fix: corrected PowerShell URL

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ console.info('Hello World!');
 # 2020 - PowerShell
 Write-Host 'Hello, World!'
       </pre>
-      <div class="carousel-caption"><a href="https://nodejs.org/" class="btn btn-secondary btn-sm" target="_blank" rel="noopener">Learn More …</a></div>
+      <div class="carousel-caption"><a href="https://en.wikipedia.org/wiki/PowerShell" class="btn btn-secondary btn-sm" target="_blank" rel="noopener">Learn More …</a></div>
     </div>
   </div>
   <a class="carousel-control-prev" href="#programmingHistroy-carousel" role="button" data-slide="prev">
