WIP: made a start on adding Zsh to Hello World Carousel

--- a/index.html
+++ b/index.html
@@ -131,6 +131,21 @@ Write-Host 'Hello, World!'
       <div class="carousel-caption"><a href="https://en.wikipedia.org/wiki/PowerShell" class="btn btn-secondary btn-sm" target="_blank" rel="noopener">Learn More …</a></div>
     </div>
   </div>
+  <div class="carousel-item p-3">
+    <pre class="mx-auto w-75 text-light" style="height: 12em;">
+# 2019 - Z Shell (AKA Zsh)
+print Hello, World!
+    </pre>
+    <div class="carousel-caption"><a href="https://en.wikipedia.org/wiki/Z_shell" class="btn btn-secondary btn-sm" target="_blank" rel="noopener">Learn More …</a></div>
+  </div>
+  <div class="carousel-item p-3">
+    <pre class="mx-auto w-75 text-light" style="height: 12em;">
+# 2020 - PowerShell
+Write-Host 'Hello, World!'
+    </pre>
+    <div class="carousel-caption"><a href="https://en.wikipedia.org/wiki/PowerShell" class="btn btn-secondary btn-sm" target="_blank" rel="noopener">Learn More …</a></div>
+  </div>
+</div>
   <a class="carousel-control-prev" href="#programmingHistroy-carousel" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
